# ai-league

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: ai.py  health.py  tools.py  utils.py
backend/app/data/: ai_resources.py  tools.py
backend/app/models/: ai_resource.py  tool.py  utility.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AIResourceGrid.vue  AppHeader.vue  FooterBar.vue  HeroSection.vue  ToolCategoryGrid.vue  ToolList.vue
frontend/src/components/tools/: Base64Tool.vue  ColorConverter.vue  HashTool.vue  JsonFormatter.vue  JsonYamlTool.vue  TextDiffTool.vue  TimestampTool.vue
frontend/src/data/: builtinTools.ts  fallback.ts
frontend/src/pages/: AIHubView.vue  HomeView.vue  ToolDetailView.vue  ToolsView.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: catalog.ts
frontend/src/types/: index.ts
